# ASCII-Game-of-Life

./: .gitignore  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  main.cpp
.cmake/api/v1/reply/: cache-v2-f0564cc3d93a217a5a6a.json  cmakeFiles-v1-c900b9dc712b4d20436c.json  codemodel-v2-80c8468c550ddece64fd.json  index-2025-02-20T18-46-25-0312.json  target-GameOfLifeA-Debug-261c91828269e945c394.json
_build/: CMakeCache.txt  cmake_install.cmake
_build/CMakeScripts/: ReRunCMake.make
_build/GameOfLifeA.xcodeproj/: project.pbxproj
_build/GameOfLifeA.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
_build/GameOfLifeA.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
_vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GameOfLifeA.sln  GameOfLifeA.vcxproj  GameOfLifeA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
utils/bits/: stdc++.hpp
